# EasyRL

./: .gitignore  README.md  pyproject.toml
data/: rl_train.parquet  rl_valid.parquet  utils.ipynb
easyrl/advantage_calculator/: group_advantage_calculator.py
easyrl/data_processor/: training_data_processor.py  validation_data_processor.py
easyrl/fsdp_backend/: fsdp_backend.py
easyrl/indicator_monitor/: indicator_monitor.py
easyrl/inference_engine/: inference_engine.py
easyrl/loss_calculator/: grpo_loss_calculator.py
easyrl/reward_verifier/: math_verifier.py
easyrl/trainer/GRPO_trainer/: grpo_trainer.py  start_trainer.sh
easyrl/trainer/GRPO_trainer/config/: grpo.yaml
