[[tool.uv.index]]
url="https://mirrors.ustc.edu.cn/pypi/simple"
default=true

[project]
name = "easyrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastparquet>=2024.11.0",
    "latex2sympy2-extended>=1.10.2",
    "levenshtein>=0.27.3",
    "math-verify>=0.8.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "safetensors>=0.6.2",
    "transformers>=4.57.1",
    "vllm>=0.11.0",
]
